fix(accessibility) adjust token to meet WCAG AA contrast with white text

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -26,7 +26,7 @@
         outline: 0;
         margin: 4px;
         border-radius: 0 0 variables.$borderRadius variables.$borderRadius;
-        box-shadow: 0px 0px 0px 2px #4687ed; // focus01/primary07
+        box-shadow: 0px 0px 0px 2px #D7E3F9; // focus01
     }
 
     & > :first-child {
