--- a/css/_meetings_list.scss
+++ b/css/_meetings_list.scss
@@ -170,7 +170,7 @@
 
         .delete-meeting:hover {
             &>svg {
-                fill: #4687ED;
+                fill: #246FE5;
             }
         }
     }
